// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render alpha info text 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="gf-form"
        >
          <label
            className="gf-form-label width-10"
          >
            Plugin state
          </label>
          <label
            className="gf-form-label gf-form-label--transparent"
          >
            <PluginStateinfo
              state="alpha"
            />
          </label>
        </div>
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <div
          className="gf-form-group"
        />
        <ButtonRow
          isReadOnly={false}
          onDelete={[Function]}
          onSubmit={[Function]}
          onTest={[Function]}
        />
      </form>
    </div>
  </PageContents>
</Page>
`;

exports[`Render should render beta info text 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="gf-form"
        >
          <label
            className="gf-form-label width-10"
          >
            Plugin state
          </label>
          <label
            className="gf-form-label gf-form-label--transparent"
          >
            <PluginStateinfo
              state="beta"
            />
          </label>
        </div>
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <div
          className="gf-form-group"
        />
        <ButtonRow
          isReadOnly={false}
          onDelete={[Function]}
          onSubmit={[Function]}
          onTest={[Function]}
        />
      </form>
    </div>
  </PageContents>
</Page>
`;

exports[`Render should render component 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <div
          className="gf-form-group"
        />
        <ButtonRow
          isReadOnly={false}
          onDelete={[Function]}
          onSubmit={[Function]}
          onTest={[Function]}
        />
      </form>
    </div>
  </PageContents>
</Page>
`;

exports[`Render should render is ready only message 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="grafana-info-box span8"
        >
          This datasource was added by config and cannot be modified using the UI. Please contact your server admin to update this datasource.
        </div>
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <div
          className="gf-form-group"
        />
        <ButtonRow
          isReadOnly={true}
          onDelete={[Function]}
          onSubmit={[Function]}
          onTest={[Function]}
        />
      </form>
    </div>
  </PageContents>
</Page>
`;

exports[`Render should render loader 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={true}
  />
</Page>
`;
